# examples

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  patterns.cpp
patterns/: decorator.cpp  singleton.cpp
src/: patterns.cpp  some_shit.cpp  temp.cpp
src/patterns/: decorator.cpp  singleton.cpp  strategy.cpp
toolchains/: tc_linux.cmake
